Yeran.K | gitignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ code-refactoring/singleton_model/model.safetensors
 code-refactoring/factory_method_model/model.safetensors
 .env
 node_modules
-code-refactoring/singleton_model/model.safetensors
 code-refactoring/factory_method_model
 code-refactoring/results
+code-refactoring/singleton_model
