--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ node_modules
 code-refactoring/singleton_model/model.safetensors
 code-refactoring/factory_method_model
 code-refactoring/results
+.venv
