--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-#Yeran
-code-refactoring/singleton_model/model.safetensors
-code-refactoring/factory_method_model/model.safetensors
-.env
 node_modules
-code-refactoring/singleton_model/model.safetensors
-code-refactoring/factory_method_model
-code-refactoring/results
+/models
+dataset
+.env
+venv
+code-refactoring
