--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,8 @@ code-refactoring/factory_method_model/model.safetensors
 code-refactoring/singleton_model/model.safetensors
 code-refactoring/factory_method_model
 code-refactoring/results
+
+env/
+venv/
+
+env/Lib/site-packages/
