updated github workflow file

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -41,11 +41,11 @@ jobs:
           push: true
           tags: ydewmin/codeharbor:latest
 
-      - name: Run tests (optional)
-        run: |
-          docker run --rm \
-            -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
-            -e OPENAI_API_KEY1=${{ secrets.OPENAI_API_KEY1 }} \
-            -e DB_HOST=localhost \
-            ydewmin/codeharbor:latest python manage.py test
-      
+#      - name: Run tests (optional)
+#        run: |
+#          docker run --rm \
+#            -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
+#            -e OPENAI_API_KEY1=${{ secrets.OPENAI_API_KEY1 }} \
+#            -e DB_HOST=localhost \
+#            ydewmin/codeharbor:latest python manage.py test
+
